[gd_scene load_steps=11 format=3 uid="uid://c45a4yixb3jbm"]

[ext_resource type="Script" uid="uid://bxf2mcr37btp3" path="res://scripts/keyword_page.gd" id="1_ql4et"]
[ext_resource type="FontFile" uid="uid://c273sghas3w00" path="res://assets/fonts/icomoon.ttf" id="2_j3cns"]
[ext_resource type="PackedScene" uid="uid://cqlu0litbx2mt" path="res://scenes/tunelist.tscn" id="3_ap7qn"]
[ext_resource type="PackedScene" uid="uid://wan12wmkrg8x" path="res://scenes/tunepage.tscn" id="4_bsida"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_frgol"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b5402"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_caf8p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ikmr8"]
bg_color = Color(0.34902, 0.34902, 0.34902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ihgh0"]
bg_color = Color(0.25, 0.25, 0.25, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rh7tp"]
font = ExtResource("2_j3cns")
font_size = 30

[node name="KeywordPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 50.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ql4et")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="TopSection" type="Control" parent="."]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
anchors_preset = 0
offset_right = 360.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="SectionWithMargin" type="Control" parent="TopSection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="group" type="HBoxContainer" parent="TopSection/SectionWithMargin"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="search_field" type="Control" parent="TopSection/SectionWithMargin/group"]
layout_mode = 2
size_flags_horizontal = 3

[node name="background" type="ColorRect" parent="TopSection/SectionWithMargin/group/search_field"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
color = Color(0.349065, 0.349065, 0.349065, 1)

[node name="line_edit" type="LineEdit" parent="TopSection/SectionWithMargin/group/search_field"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_frgol")
theme_override_styles/normal = SubResource("StyleBoxEmpty_b5402")
placeholder_text = "Keyword Search"

[node name="close_field" type="Button" parent="TopSection/SectionWithMargin/group"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_caf8p")
theme_override_styles/hover = SubResource("StyleBoxFlat_ikmr8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ihgh0")
theme_override_styles/normal = SubResource("StyleBoxFlat_ikmr8")

[node name="close_field" type="ColorRect" parent="TopSection/SectionWithMargin/group/close_field"]
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.349065, 0.349065, 0.349065, 1)

[node name="icon" type="Label" parent="TopSection/SectionWithMargin/group/close_field"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "î¤‡"
label_settings = SubResource("LabelSettings_rh7tp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TunesList" parent="." instance=ExtResource("3_ap7qn")]
layout_mode = 1
anchors_preset = -1
offset_top = 50.0

[node name="Tunepage" parent="." instance=ExtResource("4_bsida")]
visible = false
layout_mode = 1
offset_top = 0.0

[connection signal="text_changed" from="TopSection/SectionWithMargin/group/search_field/line_edit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="TopSection/SectionWithMargin/group/search_field/line_edit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="TopSection/SectionWithMargin/group/close_field" to="." method="_on_close_field_pressed"]
[connection signal="show_tune_page" from="TunesList" to="Tunepage" method="show_tune_page"]
